--- a/test.html
+++ b/test.html
@@ -8,34 +8,14 @@
 </head>
 <body>
 <div id="app">
-  <my-component></my-component>
+  <form action="">
+    <input type="text" name="123">
+    <input type="file" name="avatar">
+  </form>
 </div>
 <script>
-  new Vue({
-    el:'#app'
-  });
-  Vue.component('my-component',{
-    template: `<div>{{ count }}</div>`,
-    computed:{
-      count(){
-        return store.state.count
-      }
-    }
-  });
-  const store = new Vuex.Store({
-    state:{
-      count:0
-    },
-    mutations:{
-      increment(state){
-        state.count++
-      }
-    }
-  })
-  console.log(store.state.count);
-  store.commit('increment')
-  console.log(store.state.count);
-
+  var forms = document.forms;
+  console.log(forms);
 </script>
 </body>
 </html>
